# agiutils

./: .gitignore  CMakeLists.txt  README.md
agic/: CMakeLists.txt  README.TXT
agic/doc/: agic.html  agic.txt  agiglue.html  agiglue.txt  readme.html
agic/src/agic/: agiavis.c  agic.h  agic.lex  agic.y  agicodes.h  agicore.c  agierr.c  agierr.h  agifunc.c  agigoto.c  agiobj.c  agistr.c  agitok.c  boolean.c  boolean.h
agic/src/agiglue/: agiglue.c
showlog/: Makefile  README.TXT  agicodes.h  list.h  showlog.c
volx2/: Makefile  readme.txt  volx.c
xv3/: AGI3INFO.TXT  README.TXT  xv3.c  xv3.pas
